[tool.poetry]
name = "lifter"
version = "0.4.1"
description = "A lightweight query engine for Python iterables, inspired by Django ORM"
authors = ["Eliot Berriot <contact@eliotberriot.com>"]
maintainers = ["Zach \"theY4Kman\" Kanzler <they4kman@gmail.com>"]
license = "BSD"
readme = ["README.rst", "HISTORY.rst"]
homepage = "https://github.com/eliotberriot/lifter"
repository = "https://github.com/eliotberriot/lifter"

classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    "Programming Language :: Python :: 2",
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
]

[tool.poetry.dependencies]
python = "^3.8"

persisting-theory = "~=1.0"


[tool.poetry.group.dev.dependencies]
Django = "^4.1.1"
mock = "^4.0.3"
pytest = "^7.1.3"
requests-mock = "^1.10.0"
pytest-lambda = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
# Running "pytest" without specifying paths will use these as defaults
testpaths = [
    "tests",
    "lifter"
]

# Formatting used when printing logs out
log_format = '[%(asctime)s][%(levelname)-7s][%(name)s] %(message)s'

# Directories that are not visited by pytest collector:
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__ .mypy_cache .pytest_cache"

# Extra options:
addopts = [
    # Verbosity
    #  0 - hide test names while running (only showing ".", "F", etc)
    #  1 - show full test names while running
    #  2 - don't truncate assertion failure printouts (includes full diffs)
    "--verbosity=2",

    # Show an abbreviated traceback format
    "--tb=short",

    # Also run doctests found within modules
    "--doctest-modules",
]
